fix app bar on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 html, body {
   height: 100%;
   margin: 0;
+  overflow: hidden;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   color-scheme: light dark;
 }
